--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <!--right column-->
         <div class="right">
             <div class="myImage" id="myImageD">
-                <img src="/de" alt="desktop_design_jpg">
+                <img src="/desktop-preview.jpg" alt="desktop_design_jpg">
             </div>
             <div class="myImage" id="myImageM">
-                <img src="./fylo-landing-page-with-two-column-layout-master/design/mobile-preview.jpg" alt="mobile_design_jpg">
+                <img src="/design/mobile-preview.jpg" alt="mobile_design_jpg">
             </div>
             <div class="btn-view">
                 <button onclick="showImage('myImageD')" id="desktop-design">DESKTOP DESIGN</button>
